k8s/ingress.yaml
# https://github.com/kubernetes/ingress-gce/blob/master/docs/annotations.md
apiVersion: v1
kind: List
items:
- apiVersion: extensions/v1beta1
  kind: Ingress
  metadata:
    name: ${SERVICE_NAME}-ingress
    annotations:
      kubernetes.io/ingress.class: "nginx"
  spec:
    tls:
    - hosts:
      - ${INGRESS_URL}
      secretName: ${K8S_TLS_SECRET_NAME}
    rules:
    - host: ${INGRESS_URL}
      http:
        paths:
        - backend:
            serviceName: ${SERVICE_NAME}
            servicePort: 80
          path: /
